feat: add movie_detail

--- a/spoiledpotato/templates/spoiledpotato/movie_list.html
+++ b/spoiledpotato/templates/spoiledpotato/movie_list.html
@@ -2,7 +2,7 @@
 <ul>
     {% for movie in movies %}
     <li>
-        <a href="">{{ movie.title }}</a>
+        <a href="{% url 'movie_detail' pk=movie.pk %}">{{ movie.title }}</a>
     </li>
     {% endfor %}
 </ul>
