--- a/spoiledpotato/templates/spoiledpotato/movie_detail.html
+++ b/spoiledpotato/templates/spoiledpotato/movie_detail.html
@@ -1,4 +1,3 @@
-<!-- tunr/templates/tunr/artist_detail.html -->
 <h2>{{ movie.title }} <a href="">(edit)</a></h2>
 <h4>Runtime: {{ movie.length }}</h4>
 <h4>Rating: {{ movie.rating }}</h4>
@@ -10,7 +9,7 @@
     {% for actor in movie.actors.all %}
 
     <li>
-        <a href="">{{ actor.name }}-{{ actor.birthday }}</a>
+        <a href="{% url 'actor_detail' pk=actor.pk %}">{{ actor.name }}-{{ actor.birthday }}</a>
     </li>
     {% endfor %}
 </ul>
