--- a/spoiledpotato/templates/spoiledpotato/actor_list.html
+++ b/spoiledpotato/templates/spoiledpotato/actor_list.html
@@ -1,3 +1,4 @@
+{% extends 'spoiledpotato/base.html' %} {% block content %}
 <h2>Actors <a href="">(+)</a></h2>
 <ul>
     {% for actor in actors %}
@@ -6,3 +7,4 @@
     </li>
     {% endfor %}
 </ul>
+{% endblock %}
