feat: add static styles.css

--- a/spoiledpotato/templates/spoiledpotato/actor_list.html
+++ b/spoiledpotato/templates/spoiledpotato/actor_list.html
@@ -3,7 +3,7 @@
 <ul>
     {% for actor in actors %}
     <li>
-        <a href="">{{ actor.name }}</a>
+        <a href="{% url 'actor_detail' pk=actor.pk %}">{{ actor.name }}</a>
     </li>
     {% endfor %}
 </ul>
