--- a/spoiledpotato/templates/spoiledpotato/base.html
+++ b/spoiledpotato/templates/spoiledpotato/base.html
@@ -1,8 +1,10 @@
-<!-- tunr/templates/spoiledpotato/base.html -->
+<!-- spoiledpotato/templates/spoiledpotato/base.html -->
+{% load static %}
 <html>
 
 <head>
   <title>SpoiledPotato</title>
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 </head>
 
 <body>
