--- a/spoiledpotato/templates/spoiledpotato/actor_detail.html
+++ b/spoiledpotato/templates/spoiledpotato/actor_detail.html
@@ -1,6 +1,7 @@
 <!-- tunr/templates/spoiledpotato/actor_detail.html -->
 {% extends 'spoiledpotato/base.html' %} {% block content %}
 <h2>{{ actor.name }} <a href="">(edit)</a></h2>
+<img src="{{ actor.photo_url }}" alt="" class="movie-photo" />
 
 <h3>Movies:</h3>
 <ul>
