--- a/spoiledpotato/templates/spoiledpotato/base.html
+++ b/spoiledpotato/templates/spoiledpotato/base.html
@@ -13,7 +13,8 @@
     <a href="/actors">Actors</a>
     <a href="/">Movies</a>
   </nav>
-  {% block content %} {% endblock %}
+  {% block content %}{% endblock %}
+  {% block extra_js %}{% endblock %}
 </body>
 
 </html>
