--- a/spoiledpotato/templates/spoiledpotato/movie_form.html
+++ b/spoiledpotato/templates/spoiledpotato/movie_form.html
@@ -6,3 +6,14 @@
     <button type="submit" class="save btn btn-default">Save</button>
 </form>
 {% endblock %}
+
+{% block extra_js %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+<script>
+    $(document).ready(function () {
+        $('.django-select2').select2();
+    });
+</script>
+{% endblock %}
