--- a/spoiledpotato/templates/spoiledpotato/actor_list.html
+++ b/spoiledpotato/templates/spoiledpotato/actor_list.html
@@ -1,5 +1,5 @@
 {% extends 'spoiledpotato/base.html' %} {% block content %}
-<h2>Actors <a href="">(+)</a></h2>
+<h2>Actors <a href="{% url 'actor_create' %}">(+)</a></h2>
 <ul>
     {% for actor in actors %}
     <li>
