feat: add movie_edit

--- a/spoiledpotato/templates/spoiledpotato/movie_detail.html
+++ b/spoiledpotato/templates/spoiledpotato/movie_detail.html
@@ -1,5 +1,5 @@
 {% extends 'spoiledpotato/base.html' %} {% block content %}
-<h2>{{ movie.title }} <a href="">(edit)</a></h2>
+<h2>{{ movie.title }} <a href="{% url 'movie_edit' pk=movie.pk %}">(edit)</a></h2>
 <h4>Runtime: {{ movie.length }}</h4>
 <h4>Rating: {{ movie.rating }}</h4>
 
