--- a/spoiledpotato/templates/spoiledpotato/base.html
+++ b/spoiledpotato/templates/spoiledpotato/base.html
@@ -8,14 +8,16 @@
 </head>
 
 <body>
-  <h1>SpoiledPotato</h1>
-  <nav>
+
+  <nav class="navbar">
+    <h1 class="navbar-title">SpoiledPotato</h1>
     <form method="GET" action="{% url 'search_view' %}" class="navbar-search">
-      <input type="text" name="query" placeholder="Search..." value="{{ request.GET.query }}">
-      <button type="submit">Search</button>
+      <input type="text" name="query" placeholder="Search..." value="{{ request.GET.query }}" class="search-input">
     </form>
-    <a href="/actors">Actors</a>
-    <a href="/">Movies</a>
+    <div class="navbar-links">
+      <a href="/">Movies</a>
+      <a href="/actors">Actors</a>
+    </div>
   </nav>
   {% block content %}{% endblock %}
   {% block extra_js %}{% endblock %}
